--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -6,13 +6,23 @@
         <title></title>
     </head>
     <body>
-        <h1>Todo Items for "{{ todo }}"</h1>
+        <h1> Lista de Tarefas </h1>
+        <form method="">
+            <input type="text" id="lista" name="lista" placeholder = "Nova tarefa"> <button> Adicionar </button>
+            <br><br>
+        </form>
+    <form method="">
         <ul>
-            {% for item in items %}
-                <li>{{ item.text }}</li>
-            {% empty %}
-                <li>No items found.</li>
+            {% for todo in todos %}
+            <li>
+             {{todo.name}} 
+             <a href="{% url 'show' todo.id %}"><button type="button"> Abrir </button></a>
+             <button type="submit"> Excluir </button>
+            </li>
             {% endfor %}
-        </ul>
+        <ul>
+    </form>
+
+        
     </body>
 </html>
