--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -7,17 +7,23 @@
     </head>
     <body>
         <h1> Lista de Tarefas </h1>
-        <form method="">
-            <input type="text" id="lista" name="lista" placeholder = "Nova tarefa"> <button> Adicionar </button>
+
+        <form method="post" action="{% url 'store' %}">
+            {% csrf_token %}
+            <input type="text" name="todo_name" placeholder = "Nova tarefa"> 
+            <button> Adicionar </button>
             <br><br>
         </form>
     <form method="">
         <ul>
             {% for todo in todos %}
             <li>
-             {{todo.name}} 
-             <a href="{% url 'show' todo.id %}"><button type="button"> Abrir </button></a>
-             <button type="submit"> Excluir </button>
+            {{todo.name}} 
+            <a href="{% url 'show' todo.id %}"><button type="button"> Abrir </button></a>
+            <form method="post" action="{% url 'destroy' todo.id %}">
+                {% csrf_token %}
+            <button type="submit"> Excluir </button>
+            </form>
             </li>
             {% endfor %}
         <ul>
