--- a/main/templates/main/index.html
+++ b/main/templates/main/index.html
@@ -1,17 +1,16 @@
-<!DOCTYPE html>
-<html lang="pt-br">
-    <head>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title></title>
-    </head>
-    <body>
+{% extends "./base.html" %}
+
+{% block title %}
+Lista de Tarefas
+{% endblock %}
+
+{% block content %}
         <h1> Lista de Tarefas </h1>
 
         <form method="post" action="{% url 'store' %}">
             {% csrf_token %}
             <input type="text" name="todo_name" placeholder = "Nova tarefa"> 
-            <button> Adicionar </button>
+            <button class="btn btn-primary" > Adicionar </button>
             <br><br>
         </form>
     <form method="">
@@ -19,16 +18,13 @@
             {% for todo in todos %}
             <li>
             {{todo.name}} 
-            <a href="{% url 'show' todo.id %}"><button type="button"> Abrir </button></a>
+            <a href="{% url 'show' todo.id %}"><button type="button" class="btn btn-success"> Abrir </button></a>
             <form method="post" action="{% url 'destroy' todo.id %}">
                 {% csrf_token %}
-            <button type="submit"> Excluir </button>
+            <button type="submit" class="btn btn-danger"> Excluir </button>
             </form>
             </li>
             {% endfor %}
         <ul>
     </form>
-
-        
-    </body>
-</html>
+    {% endblock %}
